--- a/app/src/main/res/layout/activity_edit_kopi.xml
+++ b/app/src/main/res/layout/activity_edit_kopi.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_stok" />
 
     <Button
-        android:id="@+id/btn_saveLaptop"
+        android:id="@+id/btn_saveKopi"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
